# chip_8

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/emulator/: emulator.rs
