[package]
name = "chip_8"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"

#pixels dependencies
env_logger = "0.9"
log = "0.4"
pixels = "0.8.0"
winit = "0.25"
winit_input_helper = "0.10"
